--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>MedicalTourism</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="#">
+  <link rel="icon" type="image/x-icon" href="assets/images/fav-icn.png">
   <!-- Font Awesome 6 CDN -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
